--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -3,5 +3,7 @@
     <string-array name="xposed_scope">
         <item>android</item>
         <item>com.android.systemui</item>
+        <item>com.android.launcher</item>
+        <item>com.oplus.safecenter</item>
     </string-array>
 </resources>
