--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -4,6 +4,7 @@
         <item>android</item>
         <item>com.android.systemui</item>
         <item>com.android.launcher</item>
+        <item>com.android.packageinstaller</item>
         <item>com.oplus.safecenter</item>
     </string-array>
 </resources>
